package com.example.inventorymanagementproject.COR;

public class ValidationManager {
    public String username;
    public String password;
    public String role;

    public ValidationManager(String username, String password,  String role){
        this.username = username;
        this.password = password;
        this.role = role;
    }
}

